# fun-trade

./: .env.example  .env_aggressive  .env_conservative  .env_middleway  .gitignore  Makefile  README.md  config.json  config.json.example  config_aggressive.json  config_conservative.json  config_middleway.json  docker-compose.yml  fun-trade-plan.md  ngrok.local.yml.example  ngrok.yml.example  portfolio.json.example  universe.json.example
python/: pyproject.toml
python/.streamlit/: config.toml
python/funtrade/: __init__.py  cli.py  config.py  portfolio_config.py  universe_config.py
python/funtrade/backtest/: engine.py
python/funtrade/data/: eod.py  factors.py  fx.py  ingest.py  latest_price.py  loader.py  market.py  nordnet_nav.py  provider.py  reconcile.py  seed_demo.py  stooq.py  symbols.py  yfinance_provider.py
python/funtrade/execution/: paper.py
python/funtrade/models/: components.py  equilibrium.py  momentum.py  perturbation.py  regime_router.py
python/funtrade/paper/: runner.py
python/tests/: conftest.py  test_backtest.py  test_builtin_profiles.py  test_factors.py  test_h0_calibration.py  test_ingest_cli.py  test_latest_price.py  test_loader_dates.py  test_models.py  test_momentum.py  test_nordnet_nav.py  test_paper.py  test_paper_sync.py  test_plotting.py  test_plotting_data.py  test_portfolio_allocation.py  test_portfolio_config.py  test_portfolio_overlay.py  test_portfolio_performance.py  test_portfolio_values.py  test_profile_fetch.py  test_recommendations.py  test_refresh.py  test_regime_router.py  test_symbols.py  test_universe_config.py
(+54 files in other folders)
