[project]
name = "funtrade"
version = "0.1.0"
description = "Perturbation-theory European UCITS ETF research and paper trading"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "scipy>=1.14",
    "psycopg[binary]>=3.2",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["streamlit>=1.40", "plotly>=5.24"]

[project.scripts]
funtrade-calibrate = "funtrade.cli:calibrate"
funtrade-detect = "funtrade.cli:detect"
funtrade-backtest = "funtrade.cli:backtest"
funtrade-jacobian = "funtrade.cli:jacobian"
funtrade-ingest = "funtrade.cli:ingest"
funtrade-ingest-factors = "funtrade.cli:ingest_factors"
funtrade-reconcile = "funtrade.cli:reconcile"
funtrade-paper = "funtrade.paper.runner:main"
funtrade-seed = "funtrade.data.seed_demo:main"
funtrade-components = "funtrade.cli:components"
funtrade-symbols = "funtrade.cli:symbols"
funtrade-ui = "funtrade.ui.launch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["funtrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
